모듈, 클래스, exception, 엑셀, db연동

--- a/basic/inout.ipynb
+++ b/basic/inout.ipynb
@@ -13,19 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": null,
    "id": "b645f4c0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "abcdefge\n",
-      "안녕하세요\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fr = open(\"./test1.txt\",\"r\", encoding=\"utf-8\")\n",
     "content = fr.read() # 파일의 전체 내용 읽기\n",
@@ -39,16 +30,7 @@
    "execution_count": null,
    "id": "46ee7bc0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "abcdefge\n",
-      "안녕하세요"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fr = open(\"./test1.txt\",\"r\", encoding=\"utf-8\")\n",
     "content = fr.readline() # 줄단위 읽기\n",
@@ -64,15 +46,7 @@
    "execution_count": null,
    "id": "4827fe53",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['abcdefge\\n', '안녕하세요']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fr = open(\"./test1.txt\",\"r\", encoding=\"utf-8\")\n",
     "content = fr.readlines() # 전체 내용을 가져올 때 리스트로 처리\n",
@@ -84,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "58484317",
    "metadata": {},
    "outputs": [],
@@ -96,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "da24317b",
    "metadata": {},
    "outputs": [],
@@ -125,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "99310918",
    "metadata": {},
    "outputs": [],
@@ -139,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "e4be8d52",
    "metadata": {},
    "outputs": [],
@@ -158,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "df3fa2a2",
    "metadata": {},
    "outputs": [],
@@ -182,40 +156,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "46039e32",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'타파'"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "random.choice(hanguls) + random.choice(hanguls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "3ad9a342",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[95, 78, 92, 89, 100, 65, 78, 92]\n",
-      "총점 : 689 평균 : 86.12\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# score.txt 읽기\n",
     "# 총점과 평균 구하기\n",
@@ -291,21 +245,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "b18f4b66",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'가'"
-      ]
-     },
-     "execution_count": 127,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ord(\"가\") # 유니코드\n",
     "chr(44032) # 유니코드 => 문자"
@@ -313,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": null,
    "id": "89d0bc2e",
    "metadata": {},
    "outputs": [],
@@ -350,16 +293,7 @@
    "execution_count": null,
    "id": "8d576bd5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "abcdefge\n",
-      "안녕하세요\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# with : 파일 자동 close()\n",
     "with open(\"./test1.txt\",\"r\", encoding=\"utf-8\") as fr:\n",
@@ -371,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
    "id": "6457f18d",
    "metadata": {},
    "outputs": [],
@@ -391,28 +325,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": null,
    "id": "eec70773",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<_csv.reader object at 0x000001D3EF366080>\n",
-      "['1', '김정수', '2017-01-19 11:30:00', '25']\n",
-      "['2', '박민구', '2017-02-07 10:22:00', '35']\n",
-      "['3', '정순미', '2017-01-22 09:10:00', '33']\n",
-      "['4', '김정현', '2017-02-22 14:09:00', '45']\n",
-      "['5', '홍미진', '2017-04-01 18:00:00', '17']\n",
-      "['6', '김순철', '2017-05-14 22:33:07', '22']\n",
-      "['7', '이동철', '2017-03-01 23:44:45', '27']\n",
-      "['8', '박지숙', '2017-01-11 06:04:18', '30']\n",
-      "['9', '김은미', '2017-02-08 07:44:33', '51']\n",
-      "['10', '장혁철', '2017-12-01 13:01:11', '16']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -432,21 +348,7 @@
    "execution_count": null,
    "id": "2d23cc7a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['1', '김정수', '2017-01-18 11:30:00', '25']\n",
-      "['2', '박민구', '2017-02-07 10:22:00', '35']\n",
-      "['3', '정순미', '2017-01-22 09:10:00', '33']\n",
-      "['4', '김정현', '2017-02-22 14:30:00', '45']\n",
-      "['5', '홍미진', '2017-01-18 11:30:00', '24']\n",
-      "['6', '이동철', '2017-03-01 23:30:00', '27']\n",
-      "['7', '김은미', '2017-04-01 23:30:00', '25']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -460,27 +362,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "id": "e82ecb1b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "번호:1 이름:김정수 가입일시:2017-01-19 11:30:00 나이:25 \n",
-      "번호:2 이름:박민구 가입일시:2017-02-07 10:22:00 나이:35 \n",
-      "번호:3 이름:정순미 가입일시:2017-01-22 09:10:00 나이:33 \n",
-      "번호:4 이름:김정현 가입일시:2017-02-22 14:09:00 나이:45 \n",
-      "번호:5 이름:홍미진 가입일시:2017-04-01 18:00:00 나이:17 \n",
-      "번호:6 이름:김순철 가입일시:2017-05-14 22:33:07 나이:22 \n",
-      "번호:7 이름:이동철 가입일시:2017-03-01 23:44:45 나이:27 \n",
-      "번호:8 이름:박지숙 가입일시:2017-01-11 06:04:18 나이:30 \n",
-      "번호:9 이름:김은미 가입일시:2017-02-08 07:44:33 나이:51 \n",
-      "번호:10 이름:장혁철 가입일시:2017-12-01 13:01:11 나이:16 \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
@@ -497,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": null,
    "id": "db66cf8f",
    "metadata": {},
    "outputs": [],
@@ -530,6 +415,262 @@
     "    wt = csv.writer(fw)\n",
     "\n",
     "    wt.writerows(w)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27161a53",
+   "metadata": {},
+   "source": [
+    "### json\n",
+    "- loads() : 문자열을 dict 처리\n",
+    "- dumps() : dict 구조를 문자열로\n",
+    "- load() : json => dict\n",
+    "- dump() : dict => json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a38a52f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# json\n",
+    "# {\"name\": \"hog\",\"age\":1} ==dict\n",
+    "import json \n",
+    "data = '{\"id\":\"hong\", \"language\": \"python\", \"edtion\":\"3.5\",\"author\": \"Guido van rossum\"}'\n",
+    "\n",
+    "print(type(data))\n",
+    "\n",
+    "#dict => json\n",
+    "# json.loads(str) = > 문자열 json 으로 변환\n",
+    "jsondata = json.loads(data)\n",
+    "print(type(jsondata))\n",
+    "\n",
+    "print(jsondata.get('id'))\n",
+    "print(jsondata['id'])\n",
+    "\n",
+    "print(\"dic==> str\")\n",
+    "data = {\"id\":\"hong\", \"language\": \"python\", \"edtion\":\"3.5\",\"author\": \"Guido van rossum\"}\n",
+    "jsondata = json.dumps(data)\n",
+    "print(type(jsondata))\n",
+    "\n",
+    "# with open(\"\") as fr:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53b1a38a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./data/test.json\", \"r\") as fr:\n",
+    "    print(json.load(fr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4904a918",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./data/test1.json\",\"w\") as fw:\n",
+    "    json.dump(data,fw, indent=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66f3b7f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 터미널이 아닌 이곳에서도 라이브러리 설치 실행 가능\n",
+    "\n",
+    "# !pip install openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56719e97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 엑셀 파일\n",
+    "from openpyxl import Workbook ,load_workbook\n",
+    "from random import randint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe6cffee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb = Workbook()\n",
+    "\n",
+    "# 첫번째 시트 가져오기\n",
+    "ws = wb.active\n",
+    "# 시트명 변경\n",
+    "ws.title = \"test\"\n",
+    "\n",
+    "# 두번째 시트 생성\n",
+    "ws2 = wb.create_sheet()\n",
+    "ws2.title = \"Mysheet\"\n",
+    "ws2.sheet_properties.tabColor = \"ff66ff\"\n",
+    "\n",
+    "# 시트 복사\n",
+    "new_ws = wb.copy_worksheet(ws)\n",
+    "new_ws.title = \"copy\"\n",
+    "\n",
+    "wb.save(\"./data/file1.xlsx\")\n",
+    "wb.close()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed8dfab6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb = Workbook()\n",
+    "\n",
+    "# 첫번째 시트 가져오기\n",
+    "ws = wb.active\n",
+    "# 시트명 변경\n",
+    "ws.title = \"test\"\n",
+    "\n",
+    "# 데이터 저장\n",
+    "ws[\"A1\"] = 1\n",
+    "ws[\"A2\"] = 2\n",
+    "ws[\"A3\"] = 3\n",
+    "ws[\"A4\"] = 4\n",
+    "\n",
+    "ws[\"B1\"] = \"a\"\n",
+    "ws[\"B2\"] = \"b\"\n",
+    "ws[\"B3\"] = \"c\"\n",
+    "\n",
+    "\n",
+    "wb.save(\"./data/file1.xlsx\")\n",
+    "wb.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9ec7a1e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb = Workbook()\n",
+    "\n",
+    "# 첫번째 시트 가져오기\n",
+    "ws = wb.active\n",
+    "# 시트명 변경\n",
+    "ws.title = \"test\"\n",
+    "\n",
+    "# 데이터 저장\n",
+    "for i in range(1, 11):\n",
+    "    for j in range(1, 11):\n",
+    "        ws.cell(i, j, randint(0,100))\n",
+    "\n",
+    "wb.save(\"./data/file1.xlsx\")\n",
+    "wb.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7953ed1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 읽기\n",
+    "\n",
+    "wb = load_workbook(\"./data/sample1.xlsx\")\n",
+    "ws = wb.active\n",
+    "#\n",
+    "\n",
+    "for row in ws.iter_rows():\n",
+    "    print(row[1].value)\n",
+    "\n",
+    "wb.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f731087e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wb = Workbook()\n",
+    "\n",
+    "# 첫번째 시트 가져오기\n",
+    "ws = wb.active\n",
+    "# 시트명 변경\n",
+    "ws.title = \"점수\"\n",
+    "\n",
+    "# 데이터 저장 : 행 단위로\n",
+    "ws.append([\"번호\", \"영어\", \"수학\"])\n",
+    "for i in range(1, 11):\n",
+    "    ws.append([i, randint(0, 100), randint(0,100)])\n",
+    "\n",
+    "\n",
+    "wb.save(\"./data/score.xlsx\")\n",
+    "wb.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b69de4be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \n",
+    "\n",
+    "# 영어 점수만 가져오기\n",
+    "\n",
+    "wb = load_workbook(\"./data/score.xlsx\")\n",
+    "ws = wb.active\n",
+    "\n",
+    "b_col = ws[\"B\"]\n",
+    "for cell in b_col:\n",
+    "    print(cell.value)\n",
+    "\n",
+    "wb.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c301e53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# \n",
+    "\n",
+    "# 영어, 수학\n",
+    "\n",
+    "wb = load_workbook(\"./data/score.xlsx\")\n",
+    "ws = wb.active\n",
+    "\n",
+    "cols = ws[\"B:C\"]\n",
+    "for col in cols:\n",
+    "    for cell in col:\n",
+    "        print(cell.value, end=\" \")\n",
+    "    print()\n",
+    "\n",
+    "wb.close()"
    ]
   }
  ],
