게임예제 데이터베이스 연동 완료

--- a/basic/game.ipynb
+++ b/basic/game.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "caee0e78",
    "metadata": {},
    "outputs": [
@@ -34,7 +34,6 @@
     }
    ],
    "source": [
-    "from random import shuffle, choice\n",
     "import time\n",
     "\n",
     "start = time.time()\n",
@@ -48,7 +47,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 42,
+   "id": "0d81398e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from random import shuffle, choice\n",
+    "import time\n",
+    "import pymysql\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4be06be2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 데이터 베이스 연동\n",
+    "conn = pymysql.connect(\n",
+    "    host=\"localhost\", \n",
+    "    user=\"javadb\", \n",
+    "    password=\"12345\", \n",
+    "    database='springdb', \n",
+    "    charset=\"utf8mb4\"\n",
+    "    )\n",
+    "\n",
+    "# 테이블 생성\n",
+    "with conn.cursor() as cursor:\n",
+    "    sql = \"create table if not exists records(id int primary key auto_increment, \"\\\n",
+    "    \"correct_answer int, record decimal(10,2), regdate date default (curdate()))\"\n",
+    "    cursor.execute(sql)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "id": "7af0bfaf",
    "metadata": {},
    "outputs": [
@@ -63,7 +98,7 @@
    "source": [
     "# 읽은 후 리스트 생성\n",
     "words = []\n",
-    "with open(\"./data/word.txt\",\"r\", encoding=\"utf-8\") as fr:\n",
+    "with open(\"./data/word.txt\", \"r\", encoding=\"utf-8\") as fr:\n",
     "        for c in fr:\n",
     "                words.append(c.strip())\n",
     "        print(words)"
@@ -71,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 49,
    "id": "9fbf3dcf",
    "metadata": {},
    "outputs": [
@@ -81,28 +116,29 @@
      "text": [
       "\n",
       "** Question #1\n",
-      "conflict\n",
+      "nude\n",
       "Wrong!!\n",
       "\n",
       "** Question #2\n",
-      "bronze\n",
-      "Wrong!!\n",
+      "solution\n",
+      "Pass!!\n",
       "\n",
       "** Question #3\n",
-      "turn\n",
-      "Wrong!!\n",
+      "stronger\n",
+      "Pass!!\n",
       "\n",
       "** Question #4\n",
-      "match\n",
-      "Wrong!!\n",
+      "keno\n",
+      "Pass!!\n",
       "\n",
       "** Question #5\n",
-      "generator\n",
-      "Wrong!!\n",
+      "flame\n",
+      "Pass!!\n",
+      "2026-02-10 10:00:03.902651\n",
       "\n",
       "*** 게임결과 ***\n",
-      "게임시간 2.163 초, 정답 개수 : 0\n",
-      "불합격\n"
+      "게임시간 12.65 초, 정답 개수 : 4\n",
+      "합격\n"
      ]
     }
    ],
@@ -149,14 +185,27 @@
     "# 걸린시간\n",
     "et = end - start\n",
     "\n",
+    "# 완료한 날짜\n",
+    "now = datetime.now()\n",
+    "print(now)\n",
+    "today = now.strftime(\"%Y/%m/%d\")\n",
+    "\n",
     "print()\n",
     "print(\"*** 게임결과 ***\")\n",
-    "print(f\"게임시간 {et:.3f} 초, 정답 개수 : {corr_cnt}\")\n",
+    "print(f\"게임시간 {et:.2f} 초, 정답 개수 : {corr_cnt}\")\n",
     "if corr_cnt > 3:\n",
     "    print('합격')\n",
     "else:\n",
     "    print('불합격')\n",
-    "    "
+    "\n",
+    "# insert 구문\n",
+    "with conn.cursor() as cursor:\n",
+    "    sql = \"insert into records(correct_answer, record) values(%s,%s)\"\n",
+    "    cursor.execute(sql,(corr_cnt, et))\n",
+    "\n",
+    "conn.commit()\n",
+    "\n",
+    "\n"
    ]
   }
  ],
